<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">4´S Análisis Numérico</string>
    <string name="selec_option">Menu</string>
    <string name="close">Cerrar</string>
    <string name="fx">Función f(x)</string>
    <string name="ffx">Primera Derivada</string>
    <string name="fffx">Segunda Derivada</string>
    <string name="gx">Función g(x)</string>
    <string name="xi">Limite Inferior x0</string>
    <string name="xs">Limite Superior x1</string>
    <string name="x0">Variable Inicial</string>
    <string name="tol">Tolerancia</string>
    <string name="iter">Numero de Iteraciones</string>
    <string name="res">Resultado</string>
    <string name="send">Calcular</string>
    <string name="del">Delta</string>
    <string name="sel">Opciones</string>
    <string name="numPoint">Numero de Puntos</string>
    <string name="lambda">Lambda</string>
    <string name="bisection">Bisección</string>
    <string name="false_rule">Regla Falsa</string>
    <string name="fixed_point">Punto Fijo</string>
    <string name="incremental_search">Busqueda Incremental</string>
    <string name="multiple_roots">Raices Multiples</string>
    <string name="newton">Newton</string>
    <string name="Secant">Secante</string>
    <string name="graph">Graficador</string>
    <string name="gaussian_Elimination">Eliminación Gaussiana</string>
    <string name="LUFactorization_Cholesky">LU Factorizacion Cholesky</string>
    <string name="LUFactorization_Doolittle">LU Factorizacion Doolittle</string>
    <string name="LUFactorization_Crout">LU Factorizacion Crout</string>
    <string name="jacobi">Jacobi</string>
    <string name="gauss_Seidel">Gauss Seidel</string>
    <string name="jacobi_Relaxed">Jacobi Relaxed</string>
    <string name="gauss_Seidel_Relaxed">Gauss Seidel Relaxed</string>
    <string name="dataMatrix">Inserte variable n en el campo A,b</string>
    <string name="createBtn">Crear</string>
    <string name="n">n</string>
    <string name="xiT">xi</string>
    <string name="xsT">xs</string>
    <string name="xm">xm</string>
    <string name="ym">ym</string>
    <string name="error">error</string>
    <string name="x0T">x0</string>
    <string name="x1T">x1</string>
    <string name="y0T">y0</string>
    <string name="y1T">y1</string>
    <string name="xn">xn</string>
    <string name="yn">f(xn)</string>
    <string name="dyn">f´(xn)</string>
    <string name="ddyn">f´´(xn)</string>
    <string name="pivotingMethods">Seleccione un metodo de pivote</string>
    <string name="pivotMethods">Metodos de pivote</string>
    <string name="partial">Parcial</string>
    <string name="scaled">Escalonado</string>
    <string name="total">Total</string>
    <string name="bisectionHelp">Bisection method (Help)\n
        Es importante saber, el método supone la existencia de un intervalo con una raíz,
        si una raíz no existe en el intervalo, el método devolverá el error.
        Los datos que el algoritmo solicita ingresar son un Intervalo [xi, xs], un número máximo de
        iteraciones, una tolerancia (qué tan cerca estará el número de la raíz real) y el
        función F que será evaluada.
        Lo que hace el método Bisection es dividir un intervalo en dos, utilizando xn = (xi + xs) / 2,
        y evalúa esta expresión f (x1) * f (xn), siendo xn el número del medio, si el
        la multiplicación es menor que cero, entonces, la nueva x es xn; de lo contrario, la nueva x es xi.
        Este proceso continúa hasta que encuentra una raíz, el error es menor que la tolerancia
        o falla, se ha alcanzado el número máximo de iteraciones o no hay
        raíces en el intervalo.
        La convergencia de este método es lenta, pero siempre convergerá teóricamente. \ N
        ADVERTENCIA: El método no aceptará iteraciones por debajo de 1 y la tolerancia debe ser mayor que 0.
    </string>
    <string name="falseRuleHelp">False Rule (Help)\n
        Es importante saber, el método supone la existencia de un intervalo con una raíz,
        si una raíz no existe en el intervalo, el método devolverá el error.
        Los datos que el algoritmo solicita ingresar son un Intervalo [xi, xs] o [a, b], un máximo
        número de iteraciones, una tolerancia (qué tan cerca estará el número de la raíz real)
        y la función F que será evaluada.
        Lo que hace el método de regla False es dividir un intervalo en dos,
        usando xn = (aF (b) -bF (a)) / (F (b) -F (a)) y evalúa la expresión f (x1) * f (xn),
        Si la multiplicación es menor que cero entonces, el nuevo xs es xn; de lo contrario, el nuevo xs
        es xi. Este proceso continúa hasta que encuentra una raíz, el error es menor que
        la tolerancia o falla, se ha alcanzado el número máximo de iteraciones
        o no hay raíces en el intervalo.
        La convergencia de este método es lenta, pero siempre convergerá teóricamente. \ N
        ADVERTENCIA: El método no aceptará iteraciones por debajo de 1 y la tolerancia debe ser mayor que 0.
    </string>
    <string name="incrementalSearchHelp">
        Búsqueda adicional (Ayuda) \ n
         El mensaje de este método es x0, x1, iteraciones y una función f.
         Este método supone que la función f es continua y nos permite encontrar un
         intervalo con una raíz, mediante la evaluación interactiva de f0 * f1, donde
         f0 = F (x0) y f1 = F (x1). Si la multiplicación es menor que 0, entonces el método
         encuentra una raíz, pero x0 y x1 también pueden ser una raíz.
         El método finaliza cuando encuentra una raíz o completa el número máximo de iteraciones,
         que es un error, si f no es continuo, el evaluador de expresiones enviará
         un error si de alguna manera encuentra una asíntota. \ n
         ADVERTENCIA: El método no aceptará iteraciones en 1 y deltas nulos.
    </string>
    <string name="fixedPointHelp">
        Método de punto fijo (Ayuda) \ n
        Además, conocido como un método abierto, los métodos abiertos se llaman así porque
        no necesitan un intervalo específico, pero con un número pueden comenzar el proceso.
        Este método generará x, número de iteraciones, tolerancia,
        función f y una función g.
        Este método redefine la ecuación original f (x) = 0 y genera una nueva ecuación
        g (x), que permite encontrar un nuevo valor x donde x = g (x) yf (x) coinciden con cero.
        Es importante notar que g (x) es solo una variación de f (x), y hay
        buenas y malas funciones g (x) que están determinadas por estas 3 condiciones:
            1. X es parte de [a, b] yg también es parte de [a, b]
            2. g es continuo en [a, b]
            3. | g '(x) | menos igual k menos 1
        Si estas condiciones se encuentran, el método convergerá teóricamente en una raíz,
        y su velocidad de convergencia dependerá tanto de f (x) como de g (x). \ n
        ADVERTENCIA: El método no aceptará iteraciones por debajo de 1 y la tolerancia debe ser mayor que 0.
    </string>
    <string name="newtonHelp" >
        Método Newton \ n
         Este método es una variante del método de punto fijo, por lo que la forma en que el algoritmo
         el trabajo es similar, la diferencia entre ellos es que g (x) se calcula
         basado en esta fórmula g (x) = [x - (f (x) / f \'(x))].
        Este método es excelente cuando es fácil conocer el primer derivado
         de la función, porque converge a una velocidad mucho más rápida que el método del punto fijo.
         Para obtener una mejor comprensión de la forma en que funciona el método, consulte la ayuda de Punto fijo. \ N
         ADVERTENCIA: El método no aceptará iteraciones por debajo de 1 y la tolerancia debe ser mayor que 0.
    </string>
    <string name="secantHelp" >
        Método de raíces múltiples \ n
         Este método es una variante de los métodos de punto fijo y Newton,
         las raíces múltiples hacen el mismo procedimiento que el método de Newton,
         pero el método calcula la raíz con esta ecuación \ n
         g (x) = x- (f (x) * f \'(x) / ((f\' (x)) ^ 2-f (x) * f \'\' (x))) \ n
         Este método es excelente cuando es fácil conocer la primera y la segunda derivada
         de la función, porque converge a un ritmo mucho más rápido que
         Métodos de punto fijo y Newton.
         Para obtener una mejor comprensión de la forma en que funciona el método, consulte
         la ayuda del Punto fijo. \ n
         ADVERTENCIA: El método no aceptará iteraciones por debajo de 1 y la tolerancia debe ser mayor que 0.
    </string>
    <string name="multipleRootsHelp">
        Multiple Roots Method\n
        This method is a variant of the methods of fixed point and Newton,
        the multiple roots does the same procedure as the Newton method,
        but the method instead calculates the root with this equation
        g(x)=x−(f(x)*f′(x)/((f′(x))^2−f(x)*f′′(x)))
        This method is excellent when it’s easy to know the first and second derivates
        of the function, because it converges on a much faster rate than
        Fixed Point and Newton methods.
        To get a better understanding of the way the method works, please see
        the Fixed Point help.\n
        WARNING: The method won’t accept iterations under 1 and the tolerance must be higher than 0.
    </string>
    <string name="gaussianEliminationHelp">
        Este método tiene dos procesos, el primero es realizar transformaciones
         en el sistema de ecuaciones usando operaciones elementales (multiplicadores) para obtener
         un sistema equivalente de ecuaciones cuya matriz de coeficientes es triangular superior,
         y el segundo es una sustitución de estos valores para obtener el n número de
         resultados de las variables del sistema. Eliminación gaussiana usa sustitución regresiva
         Este método le solicitará una A y una n, siendo A la matriz que se repetirá
         y n es el orden de la matriz cuadrada. \ n
         ADVERTENCIA: El método no aceptará pedidos menores a 2, y en caso de que sea 1, devolverá el mismo
         número.
    </string>
    <string name="LUFactorizationGeneralHelp">
        Las factorizaciones LU se utilizan para resolver un sistema de ecuaciones Ax = b
         usando una permutación de la matriz A para descomponerla en dos matrices L y U.
         Dependiendo del método, la diagonal de la matriz L o U cambiará,
         Cholesky tendrá la diagonal de L y U igual, Crout tendrá todo
         la diagonal de U es 1 y Doolittle tendrá la diagonal de L es 1.
         Después de obtener L y U, ambos se pueden usar con progresivo o regresivo
         sustitución para obtener el resultado de un sistema de ecuaciones.
         Estos métodos provocarán que se descomponga una matriz A y el orden de la matriz cuadrada n. \ N
         ADVERTENCIA: estos métodos no aceptarán pedidos menores de 2, y en caso de que sea 1, devolverán el
         mismo número.
    </string>
    <string name="jacobiHelp">
        Este método se usa para encontrar las raíces en un sistema de ecuaciones usando la misma algoritmia que
         el método de punto fijo.
         Esta estructura de método es como el método de punto fijo, solicita una
         valor inicial para cada variable del sistema de ecuaciones y luego itera.
         Este método tiene casos en los que no converge. La norma para detener el método es la
         Euclidiano.
         Para una mejor comprensión, consulte la ayuda de punto fijo. \ N
         ADVERTENCIA: El método no aceptará pedidos menores a 2, y en caso de que sea 1, devolverá el mismo
         número.
    </string>
</resources>