<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo7"
    tools:context="co.edu.eafit.dis.analisisnumerico.one_variable_equation.activity_class.NewtonActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/expText"
            android:layout_width="266dp"
            android:layout_height="43dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:ems="10"
            android:hint="@string/fx"
            android:inputType="textPersonName"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/exp2Text"
            android:layout_width="267dp"
            android:layout_height="41dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="99dp"
            android:ems="10"
            android:hint="@string/ffx"
            android:inputType="textPersonName"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/iterText"
            android:layout_width="269dp"
            android:layout_height="42dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="140dp"
            android:ems="10"
            android:hint="@string/iter"
            android:inputType="textPersonName"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tolText"
            android:layout_width="269dp"
            android:layout_height="39dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="182dp"
            android:ems="10"
            android:hint="@string/tol"
            android:inputType="textPersonName"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/iniValText"
            android:layout_width="269dp"
            android:layout_height="41dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="221dp"
            android:ems="10"
            android:hint="@string/x0"
            android:inputType="textPersonName"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/calcBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="274dp"
            android:backgroundTint="#9fa8da"
            android:onClick="onCalculateClick"
            android:text="Calcular"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/resultText"
            android:layout_width="291dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="332dp"
            android:ems="10"
            android:hint="@string/res"
            android:inputType="textPersonName"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="391dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ScrollView
                android:layout_width="100dp"
                android:layout_height="200dp"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="349dp">
            <TableLayout
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="11dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/picture_frame"
                android:stretchColumns="*"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent2">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5dp"
                        android:text="@string/n"
                        android:textColor="@android:color/white"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textVie3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5dp"
                        android:text="@string/xn"
                        android:textColor="@android:color/white"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textVi3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5dp"
                        android:text="@string/yn"
                        android:textColor="@android:color/white"
                        android:textSize="20dp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5dp"
                        android:text="@string/dyn"
                        android:textColor="@android:color/white"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="5dp"
                        android:text="@string/error"
                        android:textColor="@android:color/white"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>
            </ScrollView>

        </HorizontalScrollView>

        <Button
            android:id="@+id/helpBtn"
            android:layout_width="49dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:drawable/ic_menu_help"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:onClick="onHelpClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bisText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bisText"
            android:layout_width="204dp"
            android:layout_height="36dp"
            android:textSize="25dp"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/newton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="2dp" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
